--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "mirai服务器在node上的SDK",
   "main": "main.js",
+  "scripts": {
+    "install": "yarn link"
+  },
   "license": "MIT",
   "dependencies": {
     "flyio": "^0.6.14",
