--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/ws": "^7.2.5",
+    "fast-json-stringify": "^2.2.0",
     "flyio": "^0.6.14",
     "ws": "^7.3.0"
   },
