--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^14.0.14",
     "@types/ws": "^7.2.5",
     "fast-json-stringify": "^2.2.0",
     "flyio": "^0.6.14",
